infrastructure/staging/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = ">= 3.27"
    }
  }
  required_version = ">= 0.14.9"
}

provider "aws" {
  profile = "default"
  region  = "us-east-2"
}

resource "aws_instance" "k8s-control" {
  ami           = "ami-0b9064170e32bde34"
  instance_type = "t2.medium"

  tags = {
    Name = "k8s-control"
  }
}
